README.md updated

--- a/student.ipynb
+++ b/student.ipynb
@@ -2667,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2676,17 +2676,17 @@
     "def print_metrics(labels, preds, time):\n",
     "    \"\"\"input (labels, preds) and prints Precision score, Recall score,\n",
     "    Accuracy score, F1 score, and Confusion matrix\"\"\"\n",
-    "    print(\"Precision Score: {}\".format(precision_score(labels, preds, average=None)))\n",
-    "    print(\"Recall Score: {}\".format(recall_score(labels, preds, average=None)))\n",
+    "    print(\"Precision Score: {}\".format(precision_score(labels, preds, average='weighted')))\n",
+    "    print(\"Recall Score: {}\".format(recall_score(labels, preds, average='weighted')))\n",
     "    print(\"Accuracy Score: {}\".format(accuracy_score(labels, preds)))\n",
-    "    print(\"F1 Score: {}\".format(f1_score(labels, preds, average=None)))\n",
+    "    print(\"F1 Score: {}\".format(f1_score(labels, preds, average='weighted')))\n",
     "    print(\"Confision Matrix: \\n{}\".format(confusion_matrix(labels, preds)))\n",
     "    print(\"\\n Run Time: {}\".format(time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2707,7 +2707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2730,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2745,7 +2745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2757,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2770,7 +2770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3156,7 @@
        "[332074 rows x 32 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3168,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -3380,7 +3380,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3410,7 +3410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3420,14 +3420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 0.04947400093078613\n"
+      "time: 0.07404804229736328\n"
      ]
     }
    ],
@@ -3452,22 +3452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision Score: [0.85073978 0.15072835]\n",
-      "Recall Score: [0.85199584 0.14946211]\n",
+      "Precision Score: 0.7461035884358053\n",
+      "Recall Score: 0.7469826184367434\n",
       "Accuracy Score: 0.7469826184367434\n",
-      "F1 Score: [0.85136734 0.15009256]\n",
+      "F1 Score: 0.7465423102142656\n",
       "Confision Matrix: \n",
       "[[80212 13934]\n",
       " [14073  2473]]\n",
       "\n",
-      " Run Time: 0.04947400093078613\n"
+      " Run Time: 0.07404804229736328\n"
      ]
     }
    ],
@@ -3484,7 +3484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3496,16 +3496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.385653018951416"
+       "1.3285181522369385"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3527,22 +3527,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision Score: [0.8579048  0.56160164]\n",
-      "Recall Score: [0.99092898 0.0661187 ]\n",
+      "Precision Score: 0.8136140502685337\n",
+      "Recall Score: 0.8526903479926282\n",
       "Accuracy Score: 0.8526903479926282\n",
-      "F1 Score: [0.91963133 0.11830864]\n",
+      "F1 Score: 0.7998513506840833\n",
       "Confision Matrix: \n",
       "[[93292   854]\n",
       " [15452  1094]]\n",
       "\n",
-      " Run Time: 1.385653018951416\n"
+      " Run Time: 1.3285181522369385\n"
      ]
     }
    ],
@@ -3552,7 +3552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3561,7 +3561,7 @@
        "'figures/dt_printout.png'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3579,7 +3579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3595,7 +3595,7 @@
        "       2.39486038e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3606,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3635,7 +3635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3644,16 +3644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "87.61605095863342"
+       "82.94262409210205"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3678,22 +3678,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision Score: [0.96723175 0.220718  ]\n",
-      "Recall Score: [0.87596556 0.54208104]\n",
-      "Accuracy Score: 0.855644491020128\n",
-      "F1 Score: [0.91933912 0.31370528]\n",
+      "Precision Score: 0.9211381435157827\n",
+      "Recall Score: 0.8557257977089582\n",
+      "Accuracy Score: 0.8557257977089582\n",
+      "F1 Score: 0.8822497034797666\n",
       "Confision Matrix: \n",
-      "[[91061 12894]\n",
-      " [ 3085  3652]]\n",
+      "[[91029 12853]\n",
+      " [ 3117  3693]]\n",
       "\n",
-      " Run Time: 87.61605095863342\n"
+      " Run Time: 82.94262409210205\n"
      ]
     }
    ],
@@ -3710,7 +3710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3719,16 +3719,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96.95840001106262"
+       "100.36781597137451"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3750,22 +3750,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision Score: [0.982559   0.17121963]\n",
-      "Recall Score: [0.87089637 0.63307263]\n",
-      "Accuracy Score: 0.8612817547790265\n",
-      "F1 Score: [0.92336409 0.26953998]\n",
+      "Precision Score: 0.9498209335351847\n",
+      "Recall Score: 0.8612907888555632\n",
+      "Accuracy Score: 0.8612907888555632\n",
+      "F1 Score: 0.8969626863602326\n",
       "Confision Matrix: \n",
-      "[[92504 13713]\n",
-      " [ 1642  2833]]\n",
+      "[[92507 13715]\n",
+      " [ 1639  2831]]\n",
       "\n",
-      " Run Time: 96.95840001106262\n"
+      " Run Time: 100.36781597137451\n"
      ]
     }
    ],
@@ -3789,7 +3789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3798,7 +3798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3809,16 +3809,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "94.63700413703918"
+       "98.39913606643677"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3842,22 +3842,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision Score: [0.98266522 0.17363713]\n",
-      "Recall Score: [0.87123659 0.63773585]\n",
+      "Precision Score: 0.949738980439241\n",
+      "Recall Score: 0.8617334586058613\n",
       "Accuracy Score: 0.8617334586058613\n",
-      "F1 Score: [0.9236022  0.27295615]\n",
+      "F1 Score: 0.8971218745110375\n",
       "Confision Matrix: \n",
       "[[92514 13673]\n",
       " [ 1632  2873]]\n",
       "\n",
-      " Run Time: 94.63700413703918\n"
+      " Run Time: 98.39913606643677\n"
      ]
     }
    ],
@@ -3874,7 +3874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3885,9 +3885,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.740436315536499"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "\n",
@@ -3910,9 +3921,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision Score: 1.0\n",
+      "Recall Score: 0.8505221696238211\n",
+      "Accuracy Score: 0.8505221696238211\n",
+      "F1 Score: 0.9192239721145491\n",
+      "Confision Matrix: \n",
+      "[[94146 16546]\n",
+      " [    0     0]]\n",
+      "\n",
+      " Run Time: 1.740436315536499\n"
+     ]
+    }
+   ],
    "source": [
     "print_metrics(sgd_pred, y_test, sgd_n)"
    ]
